Tercer commit con el tercer html y modificando estilos

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,8 @@ H1 {
     color: blue;
     font-size:40px;
     background-color: beige;
+    font-style: inherit;
+    
 }
 p{
     color: darkcyan;
